# NN-Implementation-Cpp

./: .gitignore  CMakeLists.txt
src/ActivationFunction/: ActivationFunction.h  Linear.cpp  SigmoidFunction.cpp  tests.cpp
src/Layer/: Layer.cpp  Layer.h  tests.cpp
src/LayerStructure/: LayerStructure.cpp  LayerStructure.h
src/LossFunction/: LossFunction.h  MeanSquaredError.cpp
src/Net/: Net.cpp  Net.h
src/Neuron/: Neuron.cpp  Neuron.h  testNeuron.cpp
src/RandomValueGenerator/: RandomValueGenerator.cpp  RandomValueGenerator.h
src/utils/: utils.cpp  utils.h
